implemented header component

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="header">
+  <div class="header__title">Reverse Polish Notation</div>
+
+  <span class="header__logout" (click)="logout()"> Logout</span>
+</div>
