--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -9,7 +9,7 @@
     <!-- Log In Text-->
     <div class="login-text">Log In</div>
 
-    <form [formGroup]="loginForm" (submit)="submit($event)" class="login-form">
+    <form [formGroup]="loginForm" (submit)="submit()" class="login-form">
       <!-- USERNAME -->
       <div class="login-form-row">
         <label class="login-form__label" for="username">Username:</label>
