changes in header component

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,5 +1,7 @@
 <div class="header">
-  <div class="header__title">Reverse Polish Notation</div>
+  <div class="header__title">Reverse Polish Notation
+    <span>Calculator</span>
+  </div>
 
   <span class="header__logout" (click)="logout()"> Logout</span>
 </div>
