--- a/src/app/core/layout/header/header.component.scss
+++ b/src/app/core/layout/header/header.component.scss
@@ -5,17 +5,23 @@
   border-bottom: 2px solid $red;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 0 24px;
 
   .header__title {
     font-family: nunitoSans;
     font-size: 1.5rem;
     font-weight: bold;
-    color: $red;
+    color: $black;
+
+    span {
+      font-size: .7rem;
+      text-transform: uppercase;
+      color: $red;
+    }
   }
 
   .header__logout {
-    position: absolute;
     right: 25px;
     cursor: pointer;
     color: $black;
