--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -2,7 +2,6 @@
 
  .login {
     height: 100vh;
-    background-color: $yellow;
     font-family: nunitoSans;
 
     .login-wrapper {
@@ -19,9 +18,9 @@
        text-align: center;
        font-weight: bold;
        color: #23192d;
-       border-bottom: 5px solid $red;
-       padding-bottom: 5px;
-       margin-bottom: 5px;
+       border-bottom: 3px solid $red;
+       padding-bottom: 8px;
+       margin-bottom: 8px;
       }
 
       .login-subtitle {
@@ -29,14 +28,15 @@
        text-align: center;
        font-weight: 100;
        color: $red;
+       letter-spacing: 4px;
       }
     }
 
     .login-text {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       color: $black;
       margin-top: 50px;
-      margin-bottom: 20px;
+      margin-bottom: 32px;
       font-weight: bold;
     }
 
@@ -54,6 +54,7 @@
         text-align: left;
         display: block;
         color: $black;
+        margin-bottom: 8px;
       }
 
       .login-form__input {
@@ -77,15 +78,17 @@
     .form-invalid-error {
       color: $red-light;
       margin-bottom: 15px;
+      margin-top: 8px;
     }
 
     .login-form__btn {
       border-radius: 5px;
-      padding: 10px 15px;
+      padding: 12px 16px;
       cursor: pointer;
       background-color: $red;
       outline: none;
       border: none;
+      color: #fff;
 
       &:hover {
         background-color: $red-light;
