--- a/src/app/features/calculator/components/calculator/calculator.component.scss
+++ b/src/app/features/calculator/components/calculator/calculator.component.scss
@@ -1,22 +1,23 @@
 @import './../../../../../scss/variables';
 
 .calculator {
-  margin-top: 50px;
+  margin-top: 150px;
   display: flex;
   align-items: center;
   flex-direction: column;
   font-family: nunitoSans;
+  position: relative;
 
   .calculator__input {
     input {
       padding: 10px;
       border-radius: 5px;
-      border: 2px solid $red;
       outline: none;
       min-width: 400px;
-      font-size: 2rem;
+      font-size: 1.5rem;
+      border: 2px solid $gray;
       &:focus {
-        border-color: $red-light;
+        border-color: $red;
       }
     }
 
@@ -30,76 +31,18 @@
   .calculator__calculate {
     border-radius: 5px;
     font-size: 1.2rem;
-    color: $black;
-    border: 2px solid $red;
+    color: #fff;
+    border: none;
     padding: 10px 15px;
-    margin-top: 20px;
+    margin: 24px 0;
+    background-color: $red;
     cursor: pointer;
     &:hover {
-      background-color: $red;
       color: #fff;
+      opacity: .7;
     }
   }
-
-  .calculator__result {
-    font-size: 3rem;
-    border: 2px solid $black;
-    padding: 15px;
-    color: $red;
-    margin-top: 25px;
-    min-width: 100px;
-  }
-
-  .calculator__operators {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 25px;
-    .calculator__operator {
-      width: 50px;
-      height: 50px;
-      background-color: $yellow;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: $black;
-      border-radius: 5px;
-      cursor: pointer;
-      margin: 5px;
-      flex-basis: calc(25% - 10px);
-      font-weight: bold;
-
-      &:hover {
-        opacity: .7;
-      }
-    }
-  }
-
-  .calculator__buttons {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 25px;
-    .calculator__button {
-      width: 50px;
-      height: 50px;
-      background-color: $red;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      border-radius: 5px;
-      cursor: pointer;
-      margin: 5px;
-      flex-basis: calc(33.33% - 10px);
-
-      &.calculator__button--full-width {
-        flex-basis: 100%;
-      }
-
-      &:hover {
-        background-color: $red-light;
-      }
-    }
+  hr {
+    min-width: 400px;
   }
 }
